service.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-service
  namespace: web-app

spec:

  selector:
    app: web

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
